--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,6 @@ steps:
 
 - task: AzureWebApp@1
   inputs:
-    azureSubscription: 'Azure Pass - Sponsorship'
+    azureSubscription: '6f57203c-a898-41eb-95c4-07c7edf4c29c'
     appName: 'deathstarinc'
     package: $(System.DefaultWorkingDirectory)/**/*.zip    
