--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,3 +46,10 @@ steps:
     artifactName: 'drop'
     downloadPath: '$(System.ArtifactsDirectory)'
 
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'deathstarinc'
+    appType: 'webApp'
+    WebAppName: 'deathstarinc'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
