--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,4 +52,4 @@ steps:
     azureSubscription: 'deathstarinc'
     appType: 'webApp'
     WebAppName: 'deathstarinc'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    packageForLinux: '$(System.artifactsDirectory)/drop/*.zip'
